Fixed the angular/bootsrap problem of links not showing correct cursor.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,3 +22,5 @@
           transform: scaleX(1);
   opacity: 1;
 }
+
+a {cursor:pointer;}
